src/main/java/com/example/error/Family/FamilyNameNotFoundException.java
package com.example.error.Family;

public class FamilyNameNotFoundException extends RuntimeException{

    public FamilyNameNotFoundException() {
        super("No se puede insertar una familia sin nombre");
    }
}
